--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -366,23 +366,23 @@ add_dependencies(${PROJECT_NAME} version)
 set(CPACK_PACKAGE_VENDOR "Mudita")
 set(CPACK_PACKAGE_NAME "PurePhone")
 set(CPACK_PACKAGE_HOMEPAGE_URL "https://mudita.com/products/pure/")
-set(CPACK_TOPLEVEL_TAG "${CPACK_SYSTEM_NAME}")
+set(CPACK_TOPLEVEL_TAG ${CPACK_SYSTEM_NAME})
 # the CPACK_PACKAGE_FILE_NAME variable will be reset after include(CPack) hence a copy
-set(PACKAGE_COMMON_NAME "${CPACK_PACKAGE_NAME}-${CMAKE_PROJECT_VERSION}-${CPACK_TOPLEVEL_TAG}")
-set(CPACK_PACKAGE_FILE_NAME "${PACKAGE_COMMON_NAME}")
+set(PACKAGE_COMMON_NAME ${CPACK_PACKAGE_NAME}-${CMAKE_PROJECT_VERSION}-${CPACK_TOPLEVEL_TAG})
+set(CPACK_PACKAGE_FILE_NAME ${PACKAGE_COMMON_NAME})
 # setting this will CPack prevent from additing the default 'package' target
-set(CPACK_OUTPUT_CONFIG_FILE "${CMAKE_BINARY_DIR}/PackageConfig.cmake")
+set(CPACK_OUTPUT_CONFIG_FILE ${CMAKE_BINARY_DIR}/PackageConfig.cmake)
 set(CPACK_GENERATOR "External")
 set(CPACK_COMPONENTS_GROUPING IGNORE)
 set(CPACK_EXTERNAL_ENABLE_STAGING TRUE)
-set(PACKAGE_STAGING_DIRECTORY "${CMAKE_BINARY_DIR}/_CPack_Packages/${CPACK_TOPLEVEL_TAG}/${CPACK_GENERATOR}/${CPACK_PACKAGE_FILE_NAME}")
+set(PACKAGE_STAGING_DIRECTORY ${CMAKE_BINARY_DIR}/_CPack_Packages/${CPACK_TOPLEVEL_TAG}/${CPACK_GENERATOR}/${CPACK_PACKAGE_FILE_NAME})
 
 include(CPack)
 
 add_custom_target(package-staged
-    COMMAND "${CMAKE_CPACK_COMMAND}" 
-    "-C" "$<CONFIGURATION>"
-    "--config" "${CMAKE_BINARY_DIR}/PackageConfig.cmake"
+    COMMAND ${CMAKE_CPACK_COMMAND}
+    -C $<CONFIGURATION>
+    --config ${CPACK_OUTPUT_CONFIG_FILE}
     DEPENDS ecoboot.bin version.json
     )
 
