--- a/module-apps/application-popup/CMakeLists.txt
+++ b/module-apps/application-popup/CMakeLists.txt
@@ -7,6 +7,8 @@ target_sources( ${PROJECT_NAME}
 		"${CMAKE_CURRENT_LIST_DIR}/ApplicationPopup.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/windows/EventReminderWindow.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/windows/VolumeWindow.cpp"
+		"${CMAKE_CURRENT_LIST_DIR}/windows/MusicVolumeWindow.cpp"
+		"${CMAKE_CURRENT_LIST_DIR}/windows/CallVolumeWindow.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/windows/BrightnessWindow.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/windows/HomeModesWindow.cpp"
 	PUBLIC
