[EGD-4030] Add fs notifications for file indexer

--- a/module-services/service-fileindexer/CMakeLists.txt
+++ b/module-services/service-fileindexer/CMakeLists.txt
@@ -21,6 +21,7 @@ target_sources( ${PROJECT_NAME}
 	PRIVATE
 	"ServiceFileIndexer.cpp"
 	"messages/FileChangeMessage.cpp"
+	"EventMapper.cpp"
 	"StartupIndexer.cpp"
 	"notesIndexer.cpp"
 )
