--- a/module-apps/application-settings-new/CMakeLists.txt
+++ b/module-apps/application-settings-new/CMakeLists.txt
@@ -83,4 +83,5 @@ add_dependencies(${PROJECT_NAME} version)
 target_link_libraries(${PROJECT_NAME}
     PUBLIC
         service-bluetooth
+        date-tz
 )
