EGD-6069 fix linker error by additional deps

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -198,6 +198,7 @@ target_link_libraries(${PROJECT_NAME}
         service-bluetooth
         service-lwip
         ${LWIP_LIBRARIES}
+        stdc++
         )
 
 if (${PROJECT_TARGET} STREQUAL "TARGET_Linux")
